--- a/lang/en.json
+++ b/lang/en.json
@@ -107,6 +107,10 @@
   "confirm": "Confirm",
   "confirm_delete_server": "Delete this server permanently?",
   "confirm_restore": "This will overwrite the current database. Continue?",
+  "confirm_restore_hint": "This will overwrite the current database. Continue?",
+  "confirm_restore_title": "Confirm restore",
+  "confirm_start": "Confirm & start",
+  "confirm_start_import": "Confirm & start",
   "create_backup": "Create backup",
   "create_backup_btn": "Create backup",
   "create_backup_desc": "Immediately generates a SQLite database backup in the backup directory.",
@@ -127,12 +131,15 @@
   "dashboard": "Dashboard",
   "dashboard_subtitle": "Overview of your users and servers",
   "dashboard_title": "Dashboard",
+  "data_retention_years": "Delete data after (years)",
+  "data_retention_years_help": "0 = unlimited (keep data forever)",
   "date": "Date",
   "days_added": "days added",
   "days_before_expiration": "Days before expiration",
   "days_before_expiration_preavis": "Days before expiration (pre-notice)",
   "days_before_expiration_relance": "Days before expiration (reminder)",
   "db_size": "Database size",
+  "db_size_hint": "Database size",
   "debug_mode": "Debug mode",
   "default_subscription_days": "Default subscription duration (days)",
   "default_subscription_days_help": "Number of days automatically applied to new users.",
@@ -140,7 +147,7 @@
   "default_subscription_settings": "subscription settings",
   "delete": "Delete",
   "delete_after_expiry_days": "Delete user X days after expiration",
-  "delete_after_expiry_days_help": "Defines how many days an expired user remains before deletion.",
+  "delete_after_expiry_days_help": "Removes media server access after X days. Plex: the user is not deleted from Plex, only the library shares are revoked.",
   "delete_failed": "Delete failed",
   "delete_user_after_expiry": "Delete user X days after expiration",
   "description": "Description",
@@ -150,8 +157,13 @@
   "disable_user_on_expiration": "Disable user on expiration",
   "disabled": "Disabled",
   "discord": "Discord",
+  "discord_bot_source": "Bot source",
+  "discord_bot_source_legacy": "Use a token (legacy)",
+  "discord_bot_source_saved": "Use a saved bot",
   "discord_bot_token": "Discord bot token",
   "discord_campaign_note": "Campaigns are sent to users with Discord set. If a server is selected, only users linked to that server are targeted.",
+  "discord_connected_as": "Connected as",
+  "discord_create_vodum_bot": "Add VODUM bot",
   "discord_enabled": "Discord enabled",
   "discord_enabled_off": "Disabled",
   "discord_enabled_on": "Enabled",
@@ -159,15 +171,20 @@
   "discord_help_need_bot": "Create a bot in Discord Developer Portal and copy its token",
   "discord_help_need_user_id": "Fill each user's Discord user ID (snowflake) in the user page",
   "discord_help_title": "Discord help",
+  "discord_manage_bots": "Manage bots",
   "discord_name": "Discord name",
   "discord_note_tasks": "Discord tasks are enabled/disabled automatically with the switch.",
   "discord_order_hint": "Discord DM",
+  "discord_save_bot": "Save bot",
+  "discord_saved_bot_help": "Select a bot saved in the database. Its token will be used for sending DMs.",
+  "discord_select_bot": "Select a bot",
   "discord_subtitle": "Discord notifications (DM) + campaigns",
   "discord_template_hint": "Light Markdown DM",
   "discord_token_help": "Token is stored in DB. Regenerate it if it leaked.",
   "discord_user_id": "Discord user id",
   "documentation": "Help & Documentation",
   "done": "Done",
+  "dont_close_tab": "Don’t close this window while the file is being uploaded.",
   "download_logs": "Download logs",
   "edit": "Edit",
   "email": "Email",
@@ -411,6 +428,7 @@
   "pending": "Pending",
   "photo": "Photos",
   "playlist": "Playlists",
+  "please_wait": "Please wait…",
   "plex": "Plex",
   "plex_email": "Plex email address",
   "plex_id": "Plex ID",
@@ -588,6 +606,7 @@
   "smtp_yahoo_requires_app_password": "Yahoo requires an application password.",
   "snapshot": "Snapshot",
   "source": "Source",
+  "start_import": "Start import",
   "status": "Status",
   "status_all": "All statuses",
   "status_changed_at": "Status changed at",
@@ -598,6 +617,8 @@
   "subscription_expiration_behavior": "Expiration behavior",
   "subscription_expiry_mode_disable_help": "On the expiration date, VODUM removes the user's library access on Plex/Jellyfin. The account is NOT deleted on the media server (Plex users are kept; only access is revoked).",
   "subscription_expiry_mode_disable_title": "Disable access on expiration",
+  "subscription_expiry_mode_none_help": "No action will be taken when the subscription expires.",
+  "subscription_expiry_mode_none_title": "No automatic action",
   "subscription_expiry_mode_warn_help": "On the expiration date, VODUM creates a strict, system-managed policy for this user (message displayed when the stream is stopped). After X days, VODUM removes the user's library access on Plex/Jellyfin. If the subscription is renewed, the policy is automatically removed.",
   "subscription_expiry_mode_warn_title": "Show \"subscription expired\" warning, then disable after X days",
   "subscription_gift_history_days": "days",
@@ -646,6 +667,8 @@
   "task.cleanup_logs": "Automatic cleanup of logs older than 7 days",
   "task.cleanup_unfriended": "Cleanup users without libraries",
   "task.disable_expired_users": "Disable expired users",
+  "task.expired_subscription_manager": "Expired subscriptions manager",
+  "task.import_tautulli": "Import Tautulli history",
   "task.media_jobs_worker": "Media jobs worker",
   "task.monitor_collect_sessions": "Monitoring: collect sessions",
   "task.monitor_enqueue_refresh": "Monitoring: enqueue refresh",
@@ -653,6 +676,7 @@
   "task.send_expiration_discord": "Send expiration notifications via Discord",
   "task.send_expiration_emails": "Send expiration emails",
   "task.send_mail_campaigns": "Send campaign emails",
+  "task.stream_enforcer": "Stream enforcer",
   "task.sync_jellyfin": "Jellyfin sync",
   "task.sync_plex": "Plex sync",
   "task.update_user_status": "Automatic user status update",
@@ -664,9 +688,11 @@
   "task_description.check_servers": "Checks server availability and updates their real name.",
   "task_description.check_update": "Checks GitHub to detect if an update is available.",
   "task_description.cleanup_backups": "Deletes backups older than the retention period.",
+  "task_description.cleanup_data_retention": "Cleanup old data (history retention)",
   "task_description.cleanup_unfriended": "Detects friends without any library and marks them as unfriended.",
   "task_description.disable_expired_users": "Removes library access for expired subscriptions.",
   "task_description.expired_subscription_manager": "System: show \"subscription expired\" policy, then disable access after X days",
+  "task_description.import_tautulli": "Import watch history from a Tautulli database (tautulli.db).",
   "task_description.media_jobs_worker": "Applies pending Jellyfin/Plex access updates (media_jobs).",
   "task_description.monitor_collect_sessions": "Collects active sessions (Plex/Jellyfin) for monitoring.",
   "task_description.monitor_enqueue_refresh": "Queues monitoring refresh jobs.",
@@ -675,6 +701,7 @@
   "task_description.send_expiration_discord": "Send expiration notifications via Discord",
   "task_description.send_expiration_emails": "Automatically sends pre-expiration, reminder and expired-account emails.",
   "task_description.send_mail_campaigns": "Automatically sends campaign emails.",
+  "task_description.stream_enforcer": "Enforces streaming policies and limits active sessions.",
   "task_description.sync_jellyfin": "Syncs Jellyfin accounts and library access.",
   "task_description.sync_jellyfin_users": "Synchronizes Jellyfin users.",
   "task_description.sync_plex": "Fetches users/libraries and updates the database.",
@@ -693,6 +720,27 @@
   "tasks_enabled": "active tasks",
   "tasks_error": "in error",
   "tautulli_api_key": "Tautulli API key",
+  "tautulli_copying_db": "Copying Tautulli database and starting the import.",
+  "tautulli_db_file_label": "Tautulli database file (.db)",
+  "tautulli_import_desc": "Upload your",
+  "tautulli_import_only_available_libraries": "Import only existing libraries",
+  "tautulli_import_only_available_libraries_desc": "Skip libraries that do not exist in VODUM.",
+  "tautulli_import_options": "Tautulli import options",
+  "tautulli_import_options_desc": "Choose how VODUM should import historical data from Tautulli.",
+  "tautulli_import_options_title": "Tautulli import options",
+  "tautulli_import_tip": "Tip: you can disconnect — VODUM will keep the import result and show it later.",
+  "tautulli_import_title": "Import Tautulli",
+  "tautulli_keep_all_libraries": "Keep all libraries",
+  "tautulli_keep_all_libraries_desc": "Import all libraries even if they are not configured.",
+  "tautulli_keep_all_servers": "Keep all servers (not recommanded)",
+  "tautulli_keep_all_servers_desc": "Import the Plex server referenced by this Tautulli DB even if it does not exist in VODUM. If enabled, VODUM will create an offline Plex server entry and import into it.",
+  "tautulli_keep_all_users": "Keep all users (not recommended)",
+  "tautulli_keep_all_users_desc": "Import users even if they do not exist in VODUM. They will be created as expired to avoid triggering emails/policies.",
+  "tautulli_libraries_policy": "Libraries policy",
+  "tautulli_libraries_policy_desc": "Define how libraries should be handled during import.",
+  "tautulli_select_file_first": "Please select a Tautulli database file first (.db).",
+  "tautulli_target_server": "Target server",
+  "tautulli_target_server_desc": "Select which VODUM server the imported data will belong to.",
   "tautulli_url": "Tautulli URL",
   "template_fin": "End of subscription template",
   "template_not_found": "Template not found",
@@ -717,10 +765,15 @@
   "url": "URL",
   "url_not_defined": "URL not defined",
   "use_for_test": "Use for test",
+  "use_global_settings": "Use global settings",
   "user": "User",
+  "user_id": "User ID",
   "user_management_subtitle": "Plex user management",
   "user_merged": "User merged",
   "user_not_found": "User not found",
+  "user_notification_order_override_help": "Notification delivery order for this user (if allowed in Settings).",
+  "user_notifications_can_override": "User accounts can override the order",
+  "user_notifications_can_override_help": "If enabled, the Email/Discord order can be set per user in the user profile.",
   "user_saved": "User saved successfully",
   "user_saved_and_plex_sync_started": "Changes saved and Plex synchronization started",
   "username": "Username",
@@ -739,65 +792,37 @@
   "wednesday": "Wednesday",
   "yahoo": "Yahoo",
   "yes": "Yes",
-  "subscription_expiry_mode_none_title": "No automatic action",
-  "subscription_expiry_mode_none_help": "No action will be taken when the subscription expires.",
-  "delete_after_expiry_days_help": "Removes media server access after X days. Plex: the user is not deleted from Plex, only the library shares are revoked.",
-  "user_id": "User ID",
-  "task.stream_enforcer": "Stream enforcer",
-  "task_description.stream_enforcer": "Enforces streaming policies and limits active sessions.",
-  "tautulli_import_title": "Import Tautulli",
-  "tautulli_import_desc": "Upload your",
-  "tautulli_db_file_label": "Tautulli database file (.db)",
-  "start_import": "Start import",
-  "tautulli_import_options_title": "Tautulli import options",
-  "tautulli_import_options_desc": "Choose how VODUM should import historical data from Tautulli.",
-  "tautulli_keep_all_servers": "Keep all servers (not recommanded)",
-  "tautulli_keep_all_servers_desc": "Import the Plex server referenced by this Tautulli DB even if it does not exist in VODUM. If enabled, VODUM will create an offline Plex server entry and import into it.",
-  "tautulli_keep_all_users": "Keep all users (not recommanded)",
-  "tautulli_keep_all_users_desc": "Import users even if they do not exist in VODUM. Those users will be created as expired to avoid emails/policies being triggered.",
-  "confirm_start_import": "Confirm & start",
-  "tautulli_select_file_first": "Please select a Tautulli database file first (.db).",
-  "tautulli_import_tip": "Tip: you can disconnect — VODUM will keep the import result and show it later.",
-  "task.import_tautulli": "Import Tautulli history",
-  "task_description.import_tautulli": "Import watch history from a Tautulli database (tautulli.db).",
-  "task.expired_subscription_manager": "Expired subscriptions manager",
-  "confirm_restore_title": "Confirm restore",
-  "confirm_restore_hint": "This will overwrite the current database. Continue?",
-  "db_size_hint": "Database size",
-  "please_wait": "Please wait",
-  "tautulli_copying_db": "Copying Tautulli database...",
-  "dont_close_tab": "Do not close this tab during the operation.",
-  "please_wait": "Please wait…",
-  "tautulli_copying_db": "Copying Tautulli database and starting the import.",
-  "dont_close_tab": "Don’t close this window while the file is being uploaded.",
-"data_retention_years": "Delete data after (years)",
-"data_retention_years_help": "0 = unlimited (keep data forever)",
-"task_description.cleanup_data_retention": "Cleanup old data (history retention)",
-
-"tautulli_import_options": "Tautulli import options",
-"tautulli_import_options_desc": "Choose how VODUM should import historical data from Tautulli.",
-
-"tautulli_target_server": "Target server",
-"tautulli_target_server_desc": "Select which VODUM server the imported data will belong to.",
-
-"tautulli_libraries_policy": "Libraries policy",
-"tautulli_libraries_policy_desc": "Define how libraries should be handled during import.",
-
-"tautulli_import_only_available_libraries": "Import only existing libraries",
-"tautulli_import_only_available_libraries_desc": "Skip libraries that do not exist in VODUM.",
-
-"tautulli_keep_all_libraries": "Keep all libraries",
-"tautulli_keep_all_libraries_desc": "Import all libraries even if they are not configured.",
-
-"tautulli_keep_all_users": "Keep all users (not recommended)",
-"tautulli_keep_all_users_desc": "Import users even if they do not exist in VODUM. They will be created as expired to avoid triggering emails/policies.",
-
-"confirm_start": "Confirm & start",
-"cancel": "Cancel"
-
-
-  
-
-
+  "discord_not_configured": "Discord is not configured yet.",
+  "discord_have_bot_title": "I already have a Discord bot",
+  "discord_have_bot_help": "Paste your bot token and VODUM will connect and fill the bot name automatically.",
+  "discord_bot_token_placeholder": "Bot token",
+  "discord_connect": "Connect",
+  "discord_vodum_bot_title": "Create a VODUM bot (assistant)",
+  "discord_vodum_bot_help": "VODUM will create a bot record. You still need to create the bot in the Discord Developer Portal and paste its token here.",
+  "discord_start_setup": "Start setup",
+  "discord_vodum_steps": "1) Create a bot in the Discord Developer Portal • 2) Copy the bot token • 3) Paste it below and click Activate.",
+  "discord_activate": "Activate",
+  "discord_delete_bot": "Delete bot",
+  "discord_delete_bot_confirm": "Delete this bot? Discord will be disabled.",
+  "discord_open_developer_portal": "Open Discord Developer Portal",
+  "discord_help_create_steps": "Steps: Create an application → Add a bot → Reset token if needed → Copy/paste the token here.",
+  "discord_connect_first": "Connect a Discord bot token first",
+    "available_vars": "Available variables",
+  "campaigns": "Campaigns",
+  "enabled": "Enabled",
+  "expiration_date": "Expiration date",
+  "history": "History",
+  "optional": "Optional",
+  "priority": "Priority",
+  "provider": "Provider",
+  "rule": "Rule",
+  "scope": "Scope",
+  "send": "Send",
+  "sent_at": "Sent at",
+  "smtp": "SMTP",
+  "template": "Template",
+  "templates": "Templates",
+  "title": "Title",
+  "task.cleanup_data_retention": "Cleanup old data (retention policy)"
 
 }
