--- a/lang/fr.json
+++ b/lang/fr.json
@@ -107,6 +107,10 @@
   "confirm": "Confirmer",
   "confirm_delete_server": "Supprimer définitivement ce serveur ?",
   "confirm_restore": "Cette action va écraser la base de données actuelle. Continuer ?",
+  "confirm_restore_hint": "Cela écrasera la base de données actuelle. Continuer ?",
+  "confirm_restore_title": "Confirmer la restauration",
+  "confirm_start": "Confirmer et démarrer",
+  "confirm_start_import": "Confirmer & démarrer",
   "create_backup": "Créer une sauvegarde",
   "create_backup_btn": "Créer la sauvegarde",
   "create_backup_desc": "Génère immédiatement une sauvegarde SQLite dans le dossier de sauvegardes.",
@@ -127,12 +131,15 @@
   "dashboard": "Tableau de bord",
   "dashboard_subtitle": "Vue d’ensemble de vos utilisateurs et serveurs",
   "dashboard_title": "Tableau de bord",
+  "data_retention_years": "Supprimer les données après (années)",
+  "data_retention_years_help": "0 = illimité (conserver les données indéfiniment)",
   "date": "Date",
   "days_added": "jours ajoutés",
   "days_before_expiration": "Jours avant expiration",
   "days_before_expiration_preavis": "Jours avant expiration (préavis)",
   "days_before_expiration_relance": "Jours avant expiration (relance)",
   "db_size": "Taille de la base de données",
+  "db_size_hint": "Taille de la base",
   "debug_mode": "Mode debug",
   "default_subscription_days": "Durée d’abonnement par défaut (jours)",
   "default_subscription_days_help": "Nombre de jours appliqués automatiquement aux nouveaux utilisateurs.",
@@ -140,7 +147,7 @@
   "default_subscription_settings": "Paramètres d’abonnement",
   "delete": "Supprimer",
   "delete_after_expiry_days": "Supprimer l’utilisateur X jours après expiration",
-  "delete_after_expiry_days_help": "Définit combien de jours un utilisateur expiré reste avant suppression.",
+  "delete_after_expiry_days_help": "Retire les accès au media server après X jours. Plex : l’utilisateur n’est pas supprimé de Plex, seuls les partages sont retirés.",
   "delete_failed": "Delete failed",
   "delete_user_after_expiry": "Supprimer l’utilisateur X jours après expiration",
   "description": "Description",
@@ -150,8 +157,13 @@
   "disable_user_on_expiration": "Désactiver l’utilisateur à l’expiration",
   "disabled": "Disabled",
   "discord": "Discord",
+  "discord_bot_source": "Source du bot",
+  "discord_bot_source_legacy": "Utiliser un token (legacy)",
+  "discord_bot_source_saved": "Utiliser un bot enregistré",
   "discord_bot_token": "Token du bot Discord",
   "discord_campaign_note": "Les campagnes sont envoyées aux utilisateurs ayant un Discord. Si un serveur est sélectionné, seuls les utilisateurs liés à ce serveur sont ciblés.",
+  "discord_connected_as": "Connecté en tant que",
+  "discord_create_vodum_bot": "Ajouter bot VODUM",
   "discord_enabled": "Discord activé",
   "discord_enabled_off": "Désactivé",
   "discord_enabled_on": "Activé",
@@ -159,15 +171,20 @@
   "discord_help_need_bot": "Créer un bot sur le portail développeur Discord et récupérer son token",
   "discord_help_need_user_id": "Renseigner l’ID utilisateur Discord (snowflake) dans la fiche utilisateur",
   "discord_help_title": "Aide Discord",
+  "discord_manage_bots": "Gérer les bots",
   "discord_name": "Discord name",
   "discord_note_tasks": "Les tâches Discord sont activées/désactivées automatiquement via le switch.",
   "discord_order_hint": "Message privé Discord",
+  "discord_save_bot": "Enregistrer le bot",
+  "discord_saved_bot_help": "Sélectionnez un bot enregistré en base. Son token sera utilisé pour envoyer les DM.",
+  "discord_select_bot": "Sélectionner un bot",
   "discord_subtitle": "Notifications Discord (DM) + campagnes",
   "discord_template_hint": "DM en Markdown léger",
   "discord_token_help": "Le token est stocké en base. Pense à le régénérer si tu l’as exposé.",
   "discord_user_id": "Discord user id",
   "documentation": "Documentation",
   "done": "Done",
+  "dont_close_tab": "Ne fermez pas cet onglet pendant l’opération.",
   "download_logs": "Télécharger les logs",
   "edit": "Éditer",
   "email": "Email",
@@ -411,6 +428,7 @@
   "pending": "En attente",
   "photo": "Photos",
   "playlist": "Playlists",
+  "please_wait": "Veuillez patienter",
   "plex": "Plex",
   "plex_email": "Adresse email Plex",
   "plex_id": "ID Plex",
@@ -588,6 +606,7 @@
   "smtp_yahoo_requires_app_password": "Yahoo nécessite un mot de passe d’application.",
   "snapshot": "Capture",
   "source": "Source",
+  "start_import": "Démarrer l'import",
   "status": "Statut",
   "status_all": "Tous les statuts",
   "status_changed_at": "Statut modifié le",
@@ -598,6 +617,8 @@
   "subscription_expiration_behavior": "Comportement à l’expiration",
   "subscription_expiry_mode_disable_help": "À la date d’expiration, VODUM retire les accès aux bibliothèques sur Plex/Jellyfin. Le compte n’est PAS supprimé du serveur média (sur Plex l’utilisateur est conservé ; seuls les accès sont retirés).",
   "subscription_expiry_mode_disable_title": "Désactiver les accès à l’expiration",
+  "subscription_expiry_mode_none_help": "Aucune action ne sera effectuée lorsque l’abonnement expire.",
+  "subscription_expiry_mode_none_title": "Aucune action automatique",
   "subscription_expiry_mode_warn_help": "À la date d’expiration, VODUM crée une policy stricte, gérée par le système, pour cet utilisateur (message affiché lors de l’arrêt du stream). Après X jours, VODUM retire les accès aux bibliothèques sur Plex/Jellyfin. Si l’abonnement est renouvelé, la policy est supprimée automatiquement.",
   "subscription_expiry_mode_warn_title": "Afficher un message « abonnement terminé », puis désactiver après X jours",
   "subscription_gift_history_days": "jours",
@@ -646,6 +667,8 @@
   "task.cleanup_logs": "Nettoyage automatique des journaux de plus de 7 jours",
   "task.cleanup_unfriended": "Nettoyage des amis sans accès",
   "task.disable_expired_users": "Désactivation des expirés",
+  "task.expired_subscription_manager": "Gestion des abonnements expirés",
+  "task.import_tautulli": "Importer l’historique Tautulli",
   "task.media_jobs_worker": "Worker des jobs média",
   "task.monitor_collect_sessions": "Monitoring : collecte des sessions",
   "task.monitor_enqueue_refresh": "Monitoring : mise en file de refresh",
@@ -653,6 +676,7 @@
   "task.send_expiration_discord": "Envoyer les notifications d’expiration via Discord",
   "task.send_expiration_emails": "Envoi des emails d’expiration",
   "task.send_mail_campaigns": "Envoi des campagnes email",
+  "task.stream_enforcer": "Contrôle des flux",
   "task.sync_jellyfin": "Synchronisation Jellyfin",
   "task.sync_plex": "Synchronisation Plex",
   "task.update_user_status": "Mise à jour automatique du statut utilisateur",
@@ -664,9 +688,11 @@
   "task_description.check_servers": "Vérifie la disponibilité des serveurs et met à jour leur nom réel.",
   "task_description.check_update": "Checks GitHub to detect if an update is available.",
   "task_description.cleanup_backups": "Supprime les sauvegardes plus anciennes que la durée de rétention définie.",
+  "task_description.cleanup_data_retention": "Nettoyage des anciennes données (rétention historique)",
   "task_description.cleanup_unfriended": "Détecte les amis sans aucune bibliothèque partagée et les marque comme non amis.",
   "task_description.disable_expired_users": "Retire l'accès aux bibliothèques pour les abonnements expirés.",
   "task_description.expired_subscription_manager": "Système : afficher une policy « abonnement terminé », puis désactiver après X jours",
+  "task_description.import_tautulli": "Importe l’historique de visionnage depuis une base de données Tautulli (tautulli.db).",
   "task_description.media_jobs_worker": "Applique les mises à jour d’accès Jellyfin/Plex en attente (media_jobs).",
   "task_description.monitor_collect_sessions": "Collecte les sessions actives (Plex/Jellyfin) pour le monitoring.",
   "task_description.monitor_enqueue_refresh": "Ajoute en file d’attente les jobs de rafraîchissement du monitoring.",
@@ -675,6 +701,7 @@
   "task_description.send_expiration_discord": "Envoie les notifications d’expiration via Discord",
   "task_description.send_expiration_emails": "Envoie automatiquement les emails de préavis, de rappel et de fin d’abonnement.",
   "task_description.send_mail_campaigns": "Envoie automatiquement les campagnes d'e-mails.",
+  "task_description.stream_enforcer": "Applique les règles de streaming et contrôle les sessions actives.",
   "task_description.sync_jellyfin": "Synchronise les comptes Jellyfin et les accès aux bibliothèques.",
   "task_description.sync_jellyfin_users": "Synchronise les utilisateurs Jellyfin",
   "task_description.sync_plex": "Récupère les utilisateurs/bibliothèques et met à jour la base de données.",
@@ -693,6 +720,27 @@
   "tasks_enabled": "tâches actives",
   "tasks_error": "en erreur",
   "tautulli_api_key": "Clé API Tautulli",
+  "tautulli_copying_db": "Copie de la base Tautulli en cours...",
+  "tautulli_db_file_label": "Fichier base Tautulli (.db)",
+  "tautulli_import_desc": "Envoie ton fichier",
+  "tautulli_import_only_available_libraries": "Importer uniquement les bibliothèques existantes",
+  "tautulli_import_only_available_libraries_desc": "Ignore les bibliothèques absentes dans VODUM.",
+  "tautulli_import_options": "Options d’import Tautulli",
+  "tautulli_import_options_desc": "Choisissez comment VODUM doit importer les données historiques depuis Tautulli.",
+  "tautulli_import_options_title": "Options d'import Tautulli",
+  "tautulli_import_tip": "Astuce : tu peux te déconnecter — VODUM conservera le résultat et l’affichera plus tard.",
+  "tautulli_import_title": "Importer Tautulli",
+  "tautulli_keep_all_libraries": "Conserver toutes les bibliothèques",
+  "tautulli_keep_all_libraries_desc": "Importer toutes les bibliothèques, même si elles ne sont pas configurées.",
+  "tautulli_keep_all_servers": "Conserver tous les serveurs (not recommanded)",
+  "tautulli_keep_all_servers_desc": "Importe le serveur Plex référencé par cette DB Tautulli même s’il n’existe pas dans VODUM. Si activé, VODUM crée un serveur Plex hors-ligne et importe dedans.",
+  "tautulli_keep_all_users": "Conserver tous les utilisateurs (non recommandé)",
+  "tautulli_keep_all_users_desc": "Importer les utilisateurs même s’ils n’existent pas dans VODUM. Ils seront créés comme expirés pour éviter les déclenchements d’emails/politiques.",
+  "tautulli_libraries_policy": "Politique des bibliothèques",
+  "tautulli_libraries_policy_desc": "Détermine comment gérer les bibliothèques lors de l’import.",
+  "tautulli_select_file_first": "Sélectionne d’abord un fichier de base Tautulli (.db).",
+  "tautulli_target_server": "Serveur cible",
+  "tautulli_target_server_desc": "Serveur VODUM auquel rattacher les données importées.",
   "tautulli_url": "URL Tautulli",
   "template_fin": "Modèle fin d'abonnement",
   "template_not_found": "Template introuvable",
@@ -717,10 +765,15 @@
   "url": "URL",
   "url_not_defined": "URL non définie",
   "use_for_test": "Utiliser pour test",
+  "use_global_settings": "Utiliser les réglages globaux",
   "user": "Utilisateur",
+  "user_id": "User ID",
   "user_management_subtitle": "Gestion des utilisateurs Plex",
   "user_merged": "Utilisateur fusionné",
   "user_not_found": "Utilisateur introuvable",
+  "user_notification_order_override_help": "Ordre d’envoi des notifications pour cet utilisateur (si autorisé dans les paramètres).",
+  "user_notifications_can_override": "Les comptes utilisateur peuvent surcharger l’ordre",
+  "user_notifications_can_override_help": "Si activé, l’ordre Email/Discord peut être défini par utilisateur dans son profil.",
   "user_saved": "Utilisateur enregistré avec succès",
   "user_saved_and_plex_sync_started": "Modifications enregistrées et synchronisation Plex lancée",
   "username": "Username",
@@ -739,61 +792,37 @@
   "wednesday": "Wednesday",
   "yahoo": "Yahoo",
   "yes": "Oui",
-  "subscription_expiry_mode_none_title": "Aucune action automatique",
-  "subscription_expiry_mode_none_help": "Aucune action ne sera effectuée lorsque l’abonnement expire.",
-  "delete_after_expiry_days_help": "Retire les accès au media server après X jours. Plex : l’utilisateur n’est pas supprimé de Plex, seuls les partages sont retirés.",
-  "user_id": "User ID",
-  "task.stream_enforcer": "Contrôle des flux",
-  "task_description.stream_enforcer": "Applique les règles de streaming et contrôle les sessions actives.",
-  "tautulli_import_title": "Importer Tautulli",
-  "tautulli_import_desc": "Envoie ton fichier",
-  "tautulli_db_file_label": "Fichier base Tautulli (.db)",
-  "start_import": "Démarrer l'import",
-  "tautulli_import_options_title": "Options d'import Tautulli",
-  "tautulli_import_options_desc": "Choisis comment VODUM doit importer l’historique depuis Tautulli.",
-  "tautulli_keep_all_servers": "Conserver tous les serveurs (not recommanded)",
-  "tautulli_keep_all_servers_desc": "Importe le serveur Plex référencé par cette DB Tautulli même s’il n’existe pas dans VODUM. Si activé, VODUM crée un serveur Plex hors-ligne et importe dedans.",
-  "tautulli_keep_all_users": "Conserver tous les utilisateurs (not recommanded)",
-  "tautulli_keep_all_users_desc": "Importe les utilisateurs même s’ils n’existent pas dans VODUM. Ils seront créés comme expirés pour éviter tout envoi d’e-mails/policies.",
-  "confirm_start_import": "Confirmer & démarrer",
-  "tautulli_select_file_first": "Sélectionne d’abord un fichier de base Tautulli (.db).",
-  "tautulli_import_tip": "Astuce : tu peux te déconnecter — VODUM conservera le résultat et l’affichera plus tard.",
-  "task.import_tautulli": "Importer l’historique Tautulli",
-  "task_description.import_tautulli": "Importe l’historique de visionnage depuis une base de données Tautulli (tautulli.db).",
-  "task.expired_subscription_manager": "Gestion des abonnements expirés",
-  "confirm_restore_title": "Confirmer la restauration",
-  "confirm_restore_hint": "Cela écrasera la base de données actuelle. Continuer ?",
-  "db_size_hint": "Taille de la base",
-  "please_wait": "Veuillez patienter",
-  "tautulli_copying_db": "Copie de la base Tautulli en cours...",
-  "dont_close_tab": "Ne fermez pas cet onglet pendant l’opération.",
-"data_retention_years": "Supprimer les données après (années)",
-"data_retention_years_help": "0 = illimité (conserver les données indéfiniment)",
-"task_description.cleanup_data_retention": "Nettoyage des anciennes données (rétention historique)",
+  "discord_not_configured": "Discord n’est pas encore configuré.",
+  "discord_have_bot_title": "J’ai déjà un bot Discord",
+  "discord_have_bot_help": "Colle le token de ton bot : VODUM se connecte et récupère automatiquement le nom du bot.",
+  "discord_bot_token_placeholder": "Token du bot",
+  "discord_connect": "Connecter",
+  "discord_vodum_bot_title": "Créer un bot VODUM (assistant)",
+  "discord_vodum_bot_help": "VODUM crée un enregistrement du bot. Tu dois encore créer le bot dans le Discord Developer Portal puis coller son token ici.",
+  "discord_start_setup": "Démarrer",
+  "discord_vodum_steps": "1) Crée un bot dans le Discord Developer Portal • 2) Copie le token • 3) Colle-le ci-dessous puis clique sur Activer.",
+  "discord_activate": "Activer",
+  "discord_delete_bot": "Supprimer le bot",
+  "discord_delete_bot_confirm": "Supprimer ce bot ? Discord sera désactivé.",
+  "discord_open_developer_portal": "Ouvrir le Discord Developer Portal",
+  "discord_help_create_steps": "Étapes : Crée une application → Ajoute un bot → Réinitialise le token si besoin → Copie/colle le token ici.",
+  "discord_connect_first": "Connecte d’abord un token de bot Discord",
+    "available_vars": "Variables disponibles",
+  "campaigns": "Campagnes",
+  "enabled": "Activé",
+  "expiration_date": "Date d'expiration",
+  "history": "Historique",
+  "optional": "Optionnel",
+  "priority": "Priorité",
+  "provider": "Fournisseur",
+  "rule": "Règle",
+  "scope": "Périmètre",
+  "send": "Envoyer",
+  "sent_at": "Envoyé le",
+  "smtp": "SMTP",
+  "template": "Modèle",
+  "templates": "Modèles",
+  "title": "Titre",
+  "task.cleanup_data_retention": "Nettoyage des anciennes données (politique de conservation)"
 
-"tautulli_import_options": "Options d’import Tautulli",
-"tautulli_import_options_desc": "Choisissez comment VODUM doit importer les données historiques depuis Tautulli.",
-
-"tautulli_target_server": "Serveur cible",
-"tautulli_target_server_desc": "Serveur VODUM auquel rattacher les données importées.",
-
-"tautulli_libraries_policy": "Politique des bibliothèques",
-"tautulli_libraries_policy_desc": "Détermine comment gérer les bibliothèques lors de l’import.",
-
-"tautulli_import_only_available_libraries": "Importer uniquement les bibliothèques existantes",
-"tautulli_import_only_available_libraries_desc": "Ignore les bibliothèques absentes dans VODUM.",
-
-"tautulli_keep_all_libraries": "Conserver toutes les bibliothèques",
-"tautulli_keep_all_libraries_desc": "Importer toutes les bibliothèques, même si elles ne sont pas configurées.",
-
-"tautulli_keep_all_users": "Conserver tous les utilisateurs (non recommandé)",
-"tautulli_keep_all_users_desc": "Importer les utilisateurs même s’ils n’existent pas dans VODUM. Ils seront créés comme expirés pour éviter les déclenchements d’emails/politiques.",
-
-"confirm_start": "Confirmer et démarrer",
-"cancel": "Annuler"
-
-
-
-
-  
 }
